@@ -1,3 +1,10 @@
+2005-07-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Fix test to
+	see if the class has already been registered.  Don't issue a
+	DeprecationWarning; instead, just issue a Warning when trying to
+	register a class that is already registered.
+
 2005-07-30  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gobject/gobjectmodule.c (initgobject): Don't register PyObject
